// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField component renders a field in error state - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-fNCeYG {
    color: var(--colors-danger);
    margin-left: var(--space-1);
    font-weight: 400;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-lfQsGQ-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }

  .c-PJLV-iymbh-theme-error {
    color: var(--colors-danger);
  }

  .c-hMRxhp-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }

  .c-dhzjXW-ijkHUQU-css {
    margin-top: var(--space-2);
  }

  .c-hMRxhp-ijkHsGW-css {
    margin-right: var(--space-2);
  }

  .c-dyvMgW-iiTbKsx-css {
    transform: translateY(var(--space-0));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="searchField"
        >
          <span
            aria-hidden="true"
            class="c-fNCeYG"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-ieFlhpX-css"
      >
        <input
          class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-lfQsGQ-bXVTjQ-state-error c-cNcGUX c-cNcGUX-icRYcAH-css"
          id="searchField"
          llabel="Search Field"
          name="searchField"
          placeholder="Search Field"
          type="search"
          value=""
        />
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hvMhuR c-hvMhuR-koUlob-size-md c-hvMhuR-icDTsBU-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412 20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </div>
      <div
        class="c-dhzjXW c-PJLV c-PJLV-iymbh-theme-error c-dhzjXW-ijkHUQU-css"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-cyeZeh-size-sm c-hMRxhp-ijkHsGW-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span
          class="c-dyvMgW c-dyvMgW-bndJoy-size-sm c-dyvMgW-iiTbKsx-css"
        >
          This field is required
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`SearchField component renders a field with a disabled input - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="searchField"
        >
          Search Field
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-ieFlhpX-css"
      >
        <input
          class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
          disabled=""
          id="searchField"
          name="searchField"
          placeholder="Search Field"
          type="search"
          value=""
        />
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hvMhuR c-hvMhuR-koUlob-size-md c-hvMhuR-icDTsBU-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412 20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`SearchField component renders a field with a search input - has no programmatically detectable a11y issues 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-koUlob-size-md {
    right: 10px;
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-icDTsBU-css {
    height: 20px;
    width: 20px;
    top: 50%;
    transform: translateY(-50%);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="searchField"
        >
          Search Field
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-ieFlhpX-css"
      >
        <input
          class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
          id="searchField"
          name="searchField"
          placeholder="Search Field"
          type="search"
          value=""
        />
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hvMhuR c-hvMhuR-koUlob-size-md c-hvMhuR-icDTsBU-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412 20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;
